fix alignment

--- a/app/assets/v2/css/bounty.css
+++ b/app/assets/v2/css/bounty.css
@@ -443,11 +443,6 @@ a.btn {
   color: #0ECF7C;
 }
 
-.activity-kudos {
-  width: 60px;
-  float: right;
-}
-
 .activity .bounty-subheading,
 .activity .bounty-text {
   font-size: 12px;
